--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,36 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400;1,500;1,900&display=swap");
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #17171f;
+  font-size: 1.4rem;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.gradient {
+  background: linear-gradient(
+    90deg,
+    rgba(72, 65, 191, 1) 21%,
+    rgba(252, 3, 3, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.rastagradient {
+  background: linear-gradient(
+    90deg,
+    rgba(67, 152, 76, 1) 27%,
+    rgba(239, 249, 14, 1) 52%,
+    rgba(208, 45, 45, 1) 78%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-* {
-  box-sizing: border-box;
+@media screen and (min-width: 500px) {
+  body {
+    font-size: 1.5rem;
+  }
 }
